Add note for Fried Rice upgrade option in home.html menu

--- a/umi/home.html
+++ b/umi/home.html
@@ -1142,6 +1142,9 @@
                   veggies and
                   fried rice</strong></h4>
               </div>
+              <div class="media menu-header">
+                  <p>(Upgrade Steamed Rice to Fried Rice for $2.00)</p>
+              </div>
               <div class="col-md-12" style="padding-top: 2em">
                 <div class="media menu-item">
                   <div class="col-md-12">
