Refactor lunch and dinner menu sections in home.html for clarity and consistency; add new CSS class for menu header text styling

--- a/umi/home.html
+++ b/umi/home.html
@@ -426,26 +426,19 @@
 
           <!-- Lunch Menu -->
           <div class="tab-pane fade" id="pills-lunch" role="tabpanel" aria-labelledby="pills-lunch-tab">
-            <div class="row">
-
-
-              <div class="media menu-header">
-                <h4 class="dish-title"><strong>All lunch served with your choice of soup or salad, seasonal mixed
-                  veggies and
-                  steamed rice</strong></h4>
+            <div class="media menu-header">
+              <h4 class="dish-title"><strong>Served with your choice of soup or salad, seasonal mixed veggies and fried rice</strong></h4>
             </div>
-              <div class="media menu-header">
-                <h4 class="dish-title"><strong>Sharing Charge $6 (includes soup or salad and steamed rice)
-                  </strong></h4>
-                  </div>
-              <div class="media menu-header">
-                <h4 class="dish-title"><strong>Upgrade Steamed Rice to Fried Rice for $2.00
-                  </strong></h4>  
-              </div>
-              <div class="media menu-header">
-                <h4 class="dish-title"><strong>(Hibachi Lunch are Monday-Friday from 11:00 AM-2:30
-                  PM)</strong></h4>
-              </div>
+            <div class="media menu-header">
+                <p>Sharing Charge $6 (includes soup or salad and steamed rice)</p>
+            </div>
+            <div class="media menu-header">
+                <p>(Upgrade Steamed Rice to Fried Rice for $2.00)</p>
+            </div>
+            <div class="media menu-header"></div\
+                <p>(Hibachi Lunch are Monday-Friday from 11:00 AM-2:30 PM)</p>
+            </div>
+            <div class="row">
               <div class="col-md-6" style="padding-top: 2em">
                 <div class="media menu-item">
                   <div class="col-md-12">
@@ -663,12 +656,14 @@
 
           <!-- Dinner Menu -->
           <div class="tab-pane fade" id="pills-dinner" role="tabpanel" aria-labelledby="pills-dinner-tab">
+            <div class="media menu-header">
+              <h4 class="dish-title"><strong>All Dinners Served with your choice of House Soup, Salad, seasonal mixed veggies and
+                steamed rice</strong></h4>
+            </div>
+            <div class="media menu-header">
+                <p>(Upgrade Steamed Rice to Fried Rice for $2.00)</p>
+            </div>
             <div class="row">
-
-              <div class="media menu-header">
-                <h4 class="dish-title"><strong>All Dinners Served with your choice of House Soup, Salad, seasonal mixed veggies and
-                  steamed rice (Upgrade Steamed Rice to Fried Rice for $2.00)</strong></h4>
-              </div>
               <div class="col-md-6" style="padding-top: 2em">
                 <div class="media menu-item">
                   <div class="col-md-12">
@@ -1138,9 +1133,7 @@
             <div class="row">
 
               <div class="media menu-header">
-                <h4 class="dish-title"><strong>Served with your choice of soup or salad, seasonal mixed
-                  veggies and
-                  fried rice</strong></h4>
+                <h4 class="dish-title"><strong>Served with your choice of soup or salad, seasonal mixed veggies and fried rice</strong></h4>
               </div>
               <div class="media menu-header">
                   <p>(Upgrade Steamed Rice to Fried Rice for $2.00)</p>
