Enhance lunch and dinner menu sections in home.html by consolidating text and improving readability; update styling for menu items

--- a/umi/home.html
+++ b/umi/home.html
@@ -426,24 +426,19 @@
 
           <!-- Lunch Menu -->
           <div class="tab-pane fade" id="pills-lunch" role="tabpanel" aria-labelledby="pills-lunch-tab">
-            <div class="media menu-header">
-              <h4 class="dish-title"><strong>Served with your choice of soup or salad, seasonal mixed veggies and fried rice</strong></h4>
-            </div>
-            <div class="media menu-header">
-                <p>Sharing Charge $6 (includes soup or salad and steamed rice)</p>
-            </div>
-            <div class="media menu-header">
-                <p>(Upgrade Steamed Rice to Fried Rice for $2.00)</p>
-            </div>
-            <div class="media menu-header"></div\
-                <p>(Hibachi Lunch are Monday-Friday from 11:00 AM-2:30 PM)</p>
-            </div>
             <div class="row">
               <div class="col-md-6" style="padding-top: 2em">
                 <div class="media menu-item">
                   <div class="col-md-12">
                     <h5 class="mt-0 dish-title"><strong>Hibachi Lunch</strong></h5>
-                    <hr>
+                  </div>
+                </div>
+                <hr>
+                <div class="media menu-item">
+                  <div class="col-md-12">
+                    <p style="font-size: 18px; color: black"><strong>Served with your choice of soup or salad, seasonal mixed veggies and fried rice.</strong></h5>
+                    <p style="font-size: 15px; color: gray">Sharing Charge $6 (includes soup or salad and steamed rice)</p>
+                    <p style="font-size: 15px; color: gray">(Upgrade Steamed Rice to Fried Rice for $2.00)</p>
                   </div>
                 </div>
                 <div class="media menu-item">
@@ -656,13 +651,6 @@
 
           <!-- Dinner Menu -->
           <div class="tab-pane fade" id="pills-dinner" role="tabpanel" aria-labelledby="pills-dinner-tab">
-            <div class="media menu-header">
-              <h4 class="dish-title"><strong>All Dinners Served with your choice of House Soup, Salad, seasonal mixed veggies and
-                steamed rice</strong></h4>
-            </div>
-            <div class="media menu-header">
-                <p>(Upgrade Steamed Rice to Fried Rice for $2.00)</p>
-            </div>
             <div class="row">
               <div class="col-md-6" style="padding-top: 2em">
                 <div class="media menu-item">
@@ -670,6 +658,11 @@
                     <h5 class="mt-0 dish-title"><strong>Hibachi Dinner Entrees</strong></h5>
                     <hr>
                   </div>
+                </div>
+            
+                <div class="col-md-12">
+                  <p style="font-size: 18px; color: black"><strong>All Dinners Served with house soup, salad, seasonal mixed veggies and steamed rice</strong></h5>
+                  <p style="font-size: 15px; color: gray">(Upgrade Steamed Rice to Fried Rice for $2.00)</p>
                 </div>
                 <div class="media menu-item">
                   <div class="col-md-9">
